# puzzle-products-importer

./: .gitignore  .mrp-install  README.md  csv_handler.py  example.csv  example.env  main.py  puzzle-products-importer  puzzle-products-importer.py  pyproject.toml  queries.graphql  requirements.txt  schema.graphql  ui_layout.py
puzzle/: __init__.py  client.py  create_product.py  create_product_group.py  domains.py  enums.py  get_domains.py  get_product_descendants.py  get_projects.py  input_types.py  login.py  post_create_blind.py  product_create.py  projects.py  update_products.py  who_am_i.py  whoami.py
tests/: test_csv_handler.py
